# obs-cli

./: .gitignore  IMPLEMENTATION_PLAN.md  Makefile  PLAN.md  README.md  pyproject.toml
.github/workflows/: test.yml
obs_cli/: __init__.py  __main__.py  cli.py  database_client.py  dataview_client.py  dquery.py  install.py  logging.py
obs_cli/cli/: __init__.py  formatters.py  lint_command.py  results_formatter.py
obs_cli/commands/: __init__.py  analyze.py  code.py  folders.py  notes.py  search.py  stats.py  tags.py  tasks.py
obs_cli/config/: __init__.py  settings.py
obs_cli/core/: __init__.py  cache.py  config.py  constants.py  dataview.py  exceptions.py  linter.py  models.py  templates.py
obs_cli/formatters/: __init__.py  base.py  csv.py  json.py  table.py
obs_cli/utils/: __init__.py  console.py
obsidian-dataview-bridge/: README.md  main.ts  manifest.json  package.json
obsidian-dataview-bridge/src/: database.ts  settings.ts
obsidian-metadata-api/: .gitignore  README.md  main.ts  manifest.json  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
obsidian-metadata-api/src/: database.ts
tests/: __init__.py  conftest.py  test_cli.py  test_substitution.py  test_validate_config.py
tests/fixtures/: mock_database.json
tests/fixtures/sample_vault/: note1.md  note2.md
tests/fixtures/sample_vault/.obsidian/plugins/obsidian-metadata-api/: metadata.json
tests/integration/: __init__.py  test_cli_commands.py
tests/unit/: __init__.py  test_caching.py  test_config.py  test_dataview.py  test_linter.py
