[project]
name = "obs-cli"
version = "0.1.0"
description = "Command-line interface for Obsidian metadata"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "rich>=14.0.0",
]

[project.scripts]
obs-cli = "obs_cli.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
