[project]
name = "obsidian-dquery"
version = "2.0.0"
description = "Execute Dataview queries on Obsidian vaults from the command line"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "rich>=14.0.0",
]

[project.scripts]
obs = "obs_cli.dquery:cli"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=5.0.0",
]
